# fermata

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: cicd.yml
assets/analysis/outputs/: README.md  chunk-01-core-note.md  chunk-02-time-rhythm.md  chunk-03-measure-structure.md  chunk-04-part-score.md  chunk-05-directions.md  chunk-06-notations.md  chunk-07-beaming-stems.md  chunk-08-multi-voice.md  chunk-09-lyrics.md  chunk-10-advanced.md
assets/analysis/reviews/: README.md  assembly-report.md  chunk-01-core-note-review.md  chunk-02-time-rhythm-review.md  chunk-03-measure-structure-review.md  chunk-04-part-score-review.md  chunk-05-directions-review.md  chunk-06-notations-review.md  chunk-07-beaming-stems-review.md  chunk-08-multi-voice-review.md  chunk-09-lyrics-review.md  chunk-10-advanced-review.md
crates/design/: Cargo.toml
crates/design/dev/: 0001-claude-code-prompt-musicxml-triage.md  0002-claude-code-prompt-chunk-by-chunk-s-expression-mapping.md  0003-claude-chat-prompt-chunk-review-template.md  0004-claude-chat-prompt-assembly-consistency-check.md  0005-implement-fermata-ir-types.md  0006-fermata-lisp-project-bootstrap-document.md  0007-fermata-phase-2-musicxml-emitter-implementation-plan.md  0008-phase-3-overview.md  0009-phase-3-milestone-1-foundation.md  0010-phase-3-milestone-2-core-note-attributes.md  0011-phase-3-milestone-3-voice-barlines-navigation.md  0012-phase-3-milestone-4-directions-notations.md  0013-phase-3-milestone-5-extended-features.md  0014-phase-3-checklist-success-criteria.md  0015-phase-4-s-expr-readprint-milestone-1-foundation.md  0016-phase-4-milestone-2-pitch-duration-beam-note.md  0017-phase-4-milestone-2b-note-types.md  0018-phase-4-milestone-3-attributes-direction.md  0019-phase-4-milestone-4-notation-voice-lyric.md  0020-phase-4-milestone-5-measure-part-score.md  0021-fermata-ir-quick-reference.md  0022-phase-5-fermata-syntax-milestone-1-foundation.md  0023-phase-5-milestone-2-core-musical-elements.md  0024-phase-5-milestone-3-compound-structures.md  0025-phase-5-milestone-4-attributes-directions.md  0026-phase-5-milestone-5-score-assembly-cli.md  0027-phase-6-interactive-framework-bootstrap-doc.md  0028-phase-6-repl-collab-infra-overview.md  0029-interactive-framework-project-map-phases-6-to-8.md  0030-high-level-library-api-plan.md  0031-phase-6a-core-repl-milestone-1-repl-loop-line-editing.md  (+2 more)
crates/design/docs/: index.md
crates/fermata/: Cargo.toml
crates/fermata/assets/repl/: banner.txt
crates/fermata/src/: lib.rs  main.rs  show.rs
crates/fermata/src/ir/: attributes.rs  beam.rs  common.rs  direction.rs  duration.rs  lyric.rs  measure.rs  mod.rs  notation.rs  note.rs  part.rs  pitch.rs  score.rs  voice.rs
crates/fermata/src/lang/: ast.rs  attributes.rs  chord.rs  compiler.rs  connectors.rs  defaults.rs  direction.rs  duration.rs  error.rs  grace.rs  measure.rs  mod.rs  note.rs  part.rs  pitch.rs  score.rs  tuplet.rs
crates/fermata/src/musicxml/: divisions.rs  emit.rs  emitter.rs  mod.rs  parse.rs  reader.rs  values.rs  writer.rs
crates/fermata/src/musicxml/emit/: attributes.rs  barline.rs  direction.rs  helpers.rs  notation.rs  note.rs  score.rs  voice.rs
crates/fermata/src/musicxml/emitter/: barline.rs  note.rs
crates/fermata/src/musicxml/parse/: tests.rs
crates/fermata/src/musicxml/parser/: mod.rs  tests.rs
crates/fermata/src/repl/: commands.rs  config.rs  display.rs  error.rs  highlighter.rs  input.rs  mod.rs  prompt.rs  render.rs  session.rs  validator.rs
crates/fermata/src/sexpr/: ast.rs  error.rs  mod.rs  parser.rs  printer.rs  traits.rs
crates/fermata/src/sexpr/convert/: attributes.rs  beam.rs  common.rs  direction.rs  duration.rs  lyric.rs  mod.rs  notation.rs  note.rs  pitch.rs  score.rs  voice.rs
src/: lib.rs
workbench/: TODO.md
(+12 files in other folders)
