[package]
name = "fermata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "An S-expression DSL for working with MusicXML"
homepage = "https://github.com/oxur/fermata"
documentation = "https://docs.rs/fermata"
readme = "../../README.md"
keywords = ["music", "notation", "musicxml", "lisp", "dsl"]
categories = ["compilers", "parser-implementations", "multimedia::audio"]
authors = ["oxur contributors"]

[dependencies]
quick-xml = "0.39"
nom = "8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reedline = "0.45"
dirs = "6"

[dev-dependencies]

[[bin]]
name = "fermata"
path = "src/main.rs"

[lib]
name = "fermata"
path = "src/lib.rs"
