[package]
name = "fermata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "An S-expression DSL for working with MusicXML"
homepage = "https://github.com/oxur/fermata"
documentation = "https://docs.rs/fermata"
readme = "../../README.md"
keywords = ["music", "notation", "musicxml", "lisp", "dsl"]
categories = ["compilers", "parser-implementations", "multimedia::audio"]
authors = ["oxur contributors"]

[features]
default = []
render = ["dep:verovioxide", "dep:image", "dep:base64", "dep:crossterm"]

[dependencies]
quick-xml = "0.39"
nom = "8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reedline = "0.45"
nu-ansi-term = "0.50"
dirs = "6"
log = "0.4"
twyg = "0.6"

# Rendering dependencies (optional, enabled with 'render' feature)
verovioxide = { path = "../../../verovioxide/crates/verovioxide", optional = true }
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }
crossterm = { version = "0.29", optional = true }

[dev-dependencies]

[[bin]]
name = "fermata"
path = "src/main.rs"

[lib]
name = "fermata"
path = "src/lib.rs"
